fix(landingpage): align mobile menu item content vertically (#1250)
align menu item text with icon vertically

--- a/packages/landingpage/components/layout/header/mobile/header.mobile.module.scss
+++ b/packages/landingpage/components/layout/header/mobile/header.mobile.module.scss
@@ -46,6 +46,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0.5rem 0;
 }
 
 .routes {
@@ -57,7 +58,7 @@
   margin-left: 2px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 0.25rem;
 
   overflow: hidden;
   height: 0;
